boost1.35 (1.35.0-3) unstable; urgency=low

  * debian/patches/serialization-intrinsic64.patch: New.  Patch from
    upstream to fix build problem with GCC 4.3 on 64-bit systems.
  
  * debian/rules: The gcc module of bjam no longer honours <define>, so
    use <compileflags>-D_REENTRANT in user-config.jam.

 -- Steve M. Robbins <smr@debian.org>  Mon, 19 May 2008 01:18:27 -0500

boost1.35 (1.35.0-2) unstable; urgency=low

  * debian/control: Add missing dependencies.  Closes: #480948.
    date_time 	depends on serialization
    filesystem 	depends on system
    graph 	depends on serialization test
    iostreams 	depends on regex
    regex 	depends on thread
    thread 	depends on date_time
    wave 	depends on filesystem serialization
    multi_index [libboost-dev] depends on serialization 

 -- Steve M. Robbins <smr@debian.org>  Sat, 17 May 2008 03:50:02 -0500

boost1.35 (1.35.0-1) unstable; urgency=low

  * New upstream version.  Closes: #473752.
    debian/documentation-files: 
    debian/patches: Adjust to new version.
    debian/control: Remove depenency of libboost-dev on
    libboost-serialization-dev as noted in (1.34.1-7).  Closes: #478782.

  * debian/control: Substitute 1.34.1 --> 1.35.0 on all library package
    names.  Change source to boost1.35 so that packages will coexist in
    archive with 1.34.1 versions.  Add version string to all packages
    including -dev and -doc.  Add conflicts with previous packages.  Add
    packages libboost-system1.35.0 and libboost-system1.35-dev.

  * debian/patches/library-naming.patch: New.  Remove toolset and boost
    version from library names.
  * debian/rtupdate: Remove logic for links with toolset name.

  * debian/rules: Adjust SOVERSION, SHLIBS_VERSION, and boost_version to
    new version.  Remove DEBIAN_SUFFIX.
    Add system to boost_libs.  
    Adjust link functions:
      - Create compatibility links with toolset and boost version, rather
        than simplified name links.