@@ -5,8 +5,11 @@ boost1.35 (1.35.0-3) unstable; urgency=low
   
   * debian/rules: The gcc module of bjam no longer honours <define>, so
     use <compileflags>-D_REENTRANT in user-config.jam.
+  
+  * debian/rules: Build using -DBOOST_SP_USE_PTHREADS for: hppa, sparc,
+    and arm.
 
- -- Steve M. Robbins <smr@debian.org>  Mon, 19 May 2008 01:18:27 -0500
+ -- Steve M. Robbins <smr@debian.org>  Mon, 19 May 2008 01:26:21 -0500
 
 boost1.35 (1.35.0-2) unstable; urgency=low
 
